# substituterx

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
data/: seed_drugs.json  seed_edges.json  seed_residents.json
docs/process/: 00_apparatus_orchestrator_prompts.md  AI_DEV_PROCESS.md  EVAL_ABLATION.md  EVAL_RESULTS.md  EVAL_RESULTS_HYBRID.md  EVAL_RESULTS_MEDGEMMA.md  EVAL_RESULTS_MOCK.md  EVAL_RESULTS_OLLAMA.md  PROCESS.md  RUNBOOK.md
docs/research/: 00_INDEX.md  01_rxnorm.md  02_orange_book.md  03_primekg_qkg.md  04_ltc_domain.md  05_genai_persuasion_and_trendslop.md  transcript_qkg_paper_video.txt
docs/spec/: SPEC.md
scripts/: verify_local_only.sh
src/substituterx/: __init__.py  api.py  audit_log.py  cli.py  kg.py  models.py  provider.py  residents.py  ui.py
src/substituterx.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/substituterx/agents/: auditor.py  extractor.py  orchestrator.py  reasoner.py  validator.py
tests/: test_decide_hybrid_trap.py  test_local_only.py
tests/eval/: cases.py  run_eval.py
