[project]
name = "substituterx"
version = "0.1.0"
description = "Caregiver-facing medication substitution advisor — agentic LTC-pharmacy interview prototype"
requires-python = ">=3.11"
dependencies = [
  "anthropic>=0.40.0",
  "openai>=1.50.0",
  "pydantic>=2.9.0",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "httpx>=0.27.0",
  "duckdb>=1.1.0",
  "pandas>=2.2.0",
  "rich>=13.9.0",
  "python-dotenv>=1.0.0",
  "structlog>=24.4.0",
  "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.0", "pytest-asyncio>=0.24.0", "ruff>=0.7.0", "mypy>=1.13.0"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
